--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 <body>
     <div class="todo">
         <div class="header">
-            <h3> To Do List </h3>
+            <h4> To Do List </h4>
             <button>+</button>
         </div>
         <div class="list">
             <ul class="item">
-                <li class="item-btn">1 item-btn <span>
-                    <i class="fa-solid fa-trash" style="color: #62a0ea;"></i>
-                    <i class="fa-duotone fa-badge-check" style="--fa-primary-color: #2ec27e; --fa-secondary-color: #2ec27e;"></i>
-                    
-                </span></li>
+                <li class="item-btn"><h3>Item </h3> <span>
+                    <i class="fa-regular fa-pen-to-square" style="color: #1c71d8;"></i>
+                    <i class="fa-regular fa-circle-check" style="color: #2ec27e;"></i> 
+                    <i class="fa-solid fa-trash" style="color: #ff0022;"></i>                                       
+                </span> 
+            </li>
             </ul>
         </div>
     </div>
