fix : style.css & write functions to delete and completed item

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <div class="todo">
         <div class="header">
             <h4> To Do List </h4>
-            <button>+</button>
+            <button id="btn">+</button>
         </div>
-        <div class="list">
-            <ul class="item">
-                <li class="item-btn"><h3>Item </h3> <span>
+        <div class="item" id="itm">
+            <!-- <div class="item-btn" id="li">
+                <h3>Items</h3> 
+                <div class="spn">
                     <i class="fa-regular fa-pen-to-square" style="color: #1c71d8;"></i>
                     <i class="fa-regular fa-circle-check" style="color: #2ec27e;"></i> 
                     <i class="fa-solid fa-trash" style="color: #ff0022;"></i>                                       
-                </span> 
-            </li>
-            </ul>
+                </div> 
+            </div> -->
         </div>
     </div>
 
